long messages will no longer wrap

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ form button {
 	border-radius: 25px;
 	background: white;
 	padding: 20px;
-	width: 400px;
+	width: 60%;
 	word-wrap: break-word;
 }
 
